# heka-build

./: .gitignore  CMakeLists.txt  Makefile  README.md  README.rst  build.bat  make_pkgs.sh  make_rpms.sh  package_deps.txt  update_deps.py
cmake/: external_lua.cmake  lua-5_1_5.patch
resources/osx-pkg-installer.pmdoc/: 01osxproto-contents.xml  01osxproto.xml  index.xml
sample/: hekad.json  hekad.toml
sample/mac/: amqp_stats_logfile.toml  stats_logfile.toml
scripts/: check_goroot.py  make_pkgs.sh  register_mozsvc_plugins.py  setup_pluginloader.py  statsd_ipsum.py  update_deps.py
